--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,20 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
+    // Google Play Services
+    compile 'com.google.android.gms:play-services:8.4.0'
+
+    // Support Libraries
+    compile 'com.android.support:appcompat-v7:23.2.1'
+    compile 'com.android.support:cardview-v7:23.2.1'
+    compile 'com.android.support:design:23.2.1'
+    compile 'com.android.support:gridlayout-v7:23.2.1'
+    compile 'com.android.support:leanback-v17:23.2.1'
+    compile 'com.android.support:mediarouter-v7:23.2.1'
+    compile 'com.android.support:palette-v7:23.2.1'
+    compile 'com.android.support:recyclerview-v7:23.2.1'
+    compile 'com.android.support:support-annotations:23.2.1'
+    compile 'com.android.support:support-v13:23.2.1'
+    compile 'com.android.support:support-v4:23.2.1'
+
 }
