Created Login and SignUp Activities; Created intent from LoginActivity to SignUpActivity;

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,14 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".LoginActivity">
+
+        </activity>
+
+        <activity android:name=".SignUpActivity">
+            
+        </activity>
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
