--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,9 +25,17 @@
             
         </activity>
 
+        <activity android:name=".AddPurposeActivity">
+
+        </activity>
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyD9hBP-TLlJk57caNHJ_T6w2lylrUgNVOc"/>
 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
