--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     // Google Play Services
     compile 'com.google.android.gms:play-services:8.4.0'
-
+    compile 'com.firebase:firebase-client-android:2.5.2+'
 
 }
