--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,10 +24,11 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
     // Google Play Services
-    compile 'com.google.android.gms:play-services:8.4.0'
+    compile 'com.google.android.gms:play-services-maps:8.4.0'
+    compile 'com.google.android.gms:play-services-location:8.4.0'
     compile 'com.firebase:firebase-client-android:2.5.2+'
     compile "com.android.support:support-v4:23.1.1"
     compile "com.android.support:support-v13:23.1.1"
-    compile "com.android.support:cardview-v7:23.1.1"
+
 
 }
